[gd_scene load_steps=4 format=3 uid="uid://dwuhyht3loxi5"]

[ext_resource type="Script" path="res://addons/basic_fsm/ui/property_editor/state_property_editor.gd" id="1_74np6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y1kbj"]
bg_color = Color(0, 0, 0, 0.215686)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="LabelSettings" id="LabelSettings_gj62o"]
font_color = Color(1, 0.878431, 0.298039, 1)

[node name="StatePropertyEditor" type="Panel"]
custom_minimum_size = Vector2(150, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_y1kbj")
script = ExtResource("1_74np6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="GridContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
columns = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Name:"

[node name="NameLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "<empty>"
max_length = 15

[node name="ScriptLabel" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Script:"

[node name="ScriptValueLabel" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="AddScriptButton" type="Button" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Add Script"

[node name="WarningNameLabel" type="Label" parent="MarginContainer/VBoxContainer2"]
visible = false
layout_mode = 2
text = "Warning! Name is invalid or already in use"
label_settings = SubResource("LabelSettings_gj62o")
autowrap_mode = 2

[node name="ScriptSelector" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.gd")

[connection signal="text_changed" from="MarginContainer/VBoxContainer2/VBoxContainer/NameLineEdit" to="." method="_on_name_line_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/AddScriptButton" to="." method="_on_add_script_button_pressed"]
[connection signal="file_selected" from="ScriptSelector" to="." method="_on_script_selector_file_selected"]
